2001-02-05  Michael Chastain  <chastain@redhat.com>

	* hppah-nat.c (child_xfer_memory): Add parameter 'struct mem_attrib *'
	to conform with interface change.

2001-02-04  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/fnchange.lst: Tweak to make consistent with the
	new files.

	* config/djgpp/djconfig.sh: Use explicit absolute file name when
	invoking `find'.

	* ser-go32.c (dos_write) [UART_FIFO_WORKS]: Use outportsb only if
	UART_FIFO_WORKS is defined.  Otherwise use outportb.
	From Francisco Pastor <fpastor.etra-id@etra.es>

	* go32-nat.c (go32_xfer_memory): Make the argument list consistent
	with target.h's `to_xfer_memory' member.

2001-02-02  J.T. Conklin  <jtc@redback.com>

	* ppc-bdm.c (#include <signal.h>): Removed.
	* remote-array.c: Likewise.
	* remote-bug.c: Likewise.
	* remote-e7000.c: Likewise.
	* remote-mips.c: Likewise.
	* remote-os9k.c: Likewise.
	* remote-st.c: Likewise.
	* remote-udi.c: Likewise.
	* remote-vx29k.c: Likewise.
	* remote-vx68.c: Likewise.
	* remote-vx960.c: Likewise.
	* remote-vxmips.c: Likewise.
	* remote-vxsparc.c: Likewise.

2001-02-02  John Moore  <jmoore@redhat.com>

	* remote-utils.h (sr_set_device): Changed free() to xfree() where 
	appropriate.  Also changed Copyright to include 2001.
	* symtab.h (obstack_chunk_free, SYMBOL_INIT_DEMANGLED_NAME): Likewise.
	* value.h (value_free): Likewise.
	* gdbarch.sh (gdbarch_free): Likewise.
	* gdbarch.c, gdbarch.h: Regenerated.

2001-02-02  John Moore  <jmoore@redhat.com>

        * cli/cli-cmds.c (apropos_command): Changed occurance of free() to 
	xfree().  Also changed Copyright to include 2001.

2001-02-02  J.T. Conklin  <jtc@redback.com>

	* monitor.c (#include "gdb_wait.h"): Removed.
	* ocd.c: Likewise.
	* ppc-bdm.c: Likewise.
	* remote-adapt.c: Likewise.
	* remote-array.c: Likewise.
	* remote-bug.c: Likewise.
	* remote-e7000.c: Likewise.
	* remote-eb.c: Likewise.
	* remote-es.c: Likewise.
	* remote-mips.c: Likewise.
	* remote-mm.c: Likewise.
	* remote-nindy.c: Likewise.